feat: re-enable maven publishing to GitHub Packages

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -76,3 +76,9 @@ jobs:
       
     - name: Show version
       run: ./gradlew showVersion
+      
+    - name: Publish to GitHub Packages
+      run: ./gradlew publish
+      env:
+        USERNAME: ${{ github.actor }}
+        TOKEN: ${{ secrets.GITHUB_TOKEN }}
