feat: migrate from JGitver to Axion Release for semantic versioning
- Replace JGitver with Axion Release plugin
- Configure SNAPSHOT versions for feature branches
- Add branch-specific version incrementing (feature/* = minor, fix/* = patch)
- Update CI workflow to publish SNAPSHOT versions from feature branches
- Remove custom showVersion task in favor of Axion's currentVersion

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: CI
 
 on:
   push:
-    branches: [ main, develop, "feature/**" ]
+    branches: [develop, "feature/**"]
   pull_request:
-    branches: [ main, develop ]
+    branches: [main, develop]
 
 jobs:
   test:
@@ -35,8 +35,8 @@ jobs:
     - name: Make gradlew executable
       run: chmod +x ./gradlew
       
-    - name: Show version info
-      run: ./gradlew showVersion
+    - name: Show version
+      run: ./gradlew currentVersion
       
     - name: Run tests
       run: ./gradlew test
@@ -74,10 +74,10 @@ jobs:
     - name: Make gradlew executable
       run: chmod +x ./gradlew
       
-    - name: Show version
-      run: ./gradlew showVersion
+    - name: Show SNAPSHOT version
+      run: ./gradlew currentVersion
       
-    - name: Publish to GitHub Packages
+    - name: Publish SNAPSHOT to GitHub Packages
       run: ./gradlew publish
       env:
         USERNAME: ${{ github.actor }}
